2006-08-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/component.py:
	  Improve comment that was a bit confusing.

2006-08-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Don't treat maxclients == -1 as meaning no client is allowed; this
	  means there's no max set.
	  However... don't set maxclient to -1 by default; default to using
	  the system soft limit - reserve.

2006-08-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/common.py: Fix a screwup.

	* flumotion/twisted/integration.py (Plan._makeOutputDir): Ensure
	that the test directory exists before making subdirs in it. Should
	fix twisted 2.0.1 build failures, where trial logs into
	/tmp/tmpXXXXXX instead of ./_trial_temp.

2006-08-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/test/test_http.py:
	  add a test for requesting a direct root child, and fix the bug
	  exposed by it.

2006-08-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  Improve correctness of debug output.

2006-08-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  Fix typo.

2006-08-28  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/component.py:
	  Set mood to 'waking' when setup() is called. 

	* flumotion/manager/manager.py:
	  Note a waking component (on login) as having already been set up,
	  but not started.
	  A 'hungry' component is setup and started.
	  Improve some log lines.

2006-08-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/worker/worker.py:
	Fix docstring.

2006-08-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/component.py:
	Remove call to tryWhatCanBeStarted when component attaches, because
	we moved it to a similar place in vishnu where the depgraph
	setting is happening.
	* flumotion/manager/manager.py: