@@ -1,3 +1,9 @@
+2006-08-28  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/component.py:
+	  remove ugly hack by just logging the avatarId, which is more
+	  correct anyway.
+
 2006-08-28  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/component.py:
